# mouse

./: README.md  pyproject.toml  test.py
src/mouse/: __init__.py  application.py
src/mouse/gui/: __init__.py  header.py  urlbar.py  webview.py  window.py
